<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/activity_main"
            style="@style/Scrollview"
            tools:context="com.example.android.singlescreenapp.MainActivity">


    <LinearLayout
        style="@style/LinearLayout">

        <ImageView
            android:id="@+id/window"
            style="@style/ImageHeader"
            android:src="@drawable/window_dog"/>

        <LinearLayout
            style="@style/BlockTextHeader">

            <TextView
                android:id="@+id/title"
                style="@style/TextHeader"
                android:text="@string/title"
                android:textSize="@dimen/title_size"/>

            <TextView
                android:id="@+id/subtitle"
                style="@style/TextHeader"
                android:text="@string/subtitle"
                android:textSize="@dimen/subtitle_size"/>

        </LinearLayout>


        <LinearLayout
            style="@style/BelowHeader"
            android:orientation="horizontal">

            <LinearLayout
                style="@style/Buttons">

                <ImageView
                    style="@style/ButtonsImage"
                    android:src="@drawable/ic_star"/>

                <TextView
                    style="@style/ButtonsText"
                    android:text="@string/buttonText1"/>

            </LinearLayout>

            <LinearLayout
                style="@style/Buttons">

                <ImageView
                    style="@style/ButtonsImage"
                    android:src="@drawable/ic_directions"
                    android:onClick="goToMaps"/>

                <TextView
                    style="@style/ButtonsText"
                    android:text="@string/buttonText2"/>

            </LinearLayout>

            <LinearLayout
                style="@style/Buttons">

                <ImageView
                    style="@style/ButtonsImage"
                    android:src="@drawable/ic_phone"
                    android:onClick="callNumber"/>

                <TextView
                    style="@style/ButtonsText"
                    android:text="@string/buttonText3"/>

            </LinearLayout>

            <LinearLayout
                style="@style/Buttons">

                <ImageView
                    style="@style/ButtonsImage"
                    android:src="@drawable/ic_share"/>

                <TextView
                    style="@style/ButtonsText"
                    android:text="@string/buttonText4"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            style="@style/HorizontalItems">

            <ImageView
                style="@style/HorizontalItemsImage"
                android:src="@drawable/ic_adress"/>

            <TextView
                style="@style/HorizontalItemsText"
                android:text="@string/adress"/>

        </LinearLayout>

        <LinearLayout
            style="@style/HorizontalItems">

            <ImageView
                style="@style/HorizontalItemsImage"
                android:src="@drawable/ic_website"/>

            <TextView
                style="@style/HorizontalItemsText"
                android:text="@string/website"/>

        </LinearLayout>

        <LinearLayout
            style="@style/HorizontalItems">

            <ImageView
                style="@style/HorizontalItemsImage"
                android:src="@drawable/ic_local_phone"/>

            <TextView
                style="@style/HorizontalItemsText"
                android:text="@string/phone"/>

        </LinearLayout>

        <LinearLayout
            style="@style/HorizontalItems">

            <ImageView
                style="@style/HorizontalItemsImage"
                android:src="@drawable/ic_access_time"/>

            <TextView
                style="@style/HorizontalItemsText"
                android:text="@string/time"/>

        </LinearLayout>

        <LinearLayout
            style="@style/Description">

            <TextView
                style="@style/DescriptionTitle"
                android:text="@string/descriptionTitle"/>

            <TextView
                style="@style/DescriptionText"
                android:text="@string/description_content"/>

        </LinearLayout>

        <HorizontalScrollView
            style="@style/Scrollview">

            <LinearLayout
                style="@style/SlideshowLayout">

                <ImageView
                    style="@style/Slideshow"
                    android:src="@drawable/pic1"/>

                <ImageView
                    style="@style/Slideshow"
                    android:src="@drawable/pic4"/>


                <ImageView
                    style="@style/Slideshow"
                    android:src="@drawable/pic2"/>

                <ImageView
                    style="@style/Slideshow"
                    android:src="@drawable/pic3"/>

            </LinearLayout>

        </HorizontalScrollView>

    </LinearLayout>


</ScrollView>
